tests/snapshots/cli__metadata_help.snap
---
source: tests/cli.rs
info:
  program: losrs
  args:
    - metadata
    - "--help"
  envs: {}
  page_lines:
    - - ""
---
success: true
exit_code: 0
----- stdout -----
Print metadata for cards

Usage: losrs metadata <PATH> [PROMPT_FINGERPRINT]

Arguments:
  <PATH>                The path to the page file or graph root directory
  [PROMPT_FINGERPRINT]  Fingerprint of the card's prompt. Use metadata command to find one

Options:
  -h, --help  Print help

----- stderr -----
