tests/snapshots/cli__review_help.snap
---
source: tests/cli.rs
info:
  program: losrs
  args:
    - review
    - "--help"
  envs: {}
  page_lines:
    - - ""
---
success: true
exit_code: 0
----- stdout -----
Review cards

Usage: losrs review [OPTIONS] <PATH> [PROMPT_FINGERPRINT]

Arguments:
  <PATH>                The path to the page file or graph root directory
  [PROMPT_FINGERPRINT]  Fingerprint of the card's prompt. Use metadata command to find one

Options:
      --at <TIMESTAMP>  RFC3999 timestamp to use as the time of the review. Affects both selection and updating
      --seed <SEED>     Seed used for shuffling cards ready to be reviewed
  -h, --help            Print help

----- stderr -----
