tests/snapshots/cli__root_help.snap
---
source: tests/cli.rs
info:
  program: losrs
  args:
    - "--help"
  envs: {}
  page_lines:
    - - ""
---
success: true
exit_code: 0
----- stdout -----
Work with Spaced Repetition Cards (SRS) embedded in Logseq pages

Usage: losrs [OPTIONS] <COMMAND>

Commands:
  show          Print cards
  review        Review cards
  metadata      Print metadata for cards
  fix-metadata  Fix metadata for cards
  config        Manage configuration
  help          Print this message or the help of the given subcommand(s)

Options:
      --format <FORMAT>
          [default: clean]
          [possible values: clean, typst, storage, sixel, kitty, i-term]

      --ppi <PPI>
          Pixel density in PPI (Pixels Per Inch).
          
          Used with image based formats.
          
          [default: 96]

      --base-font-size <BASE_FONT_SIZE>
          "base" font size in points.
          
          Everything is scaled relative to this font size.
          
          It is best to set this to the same font size as your terminal font size.
          
          Used with image based formats.
          
          [default: 12]

      --line-height-scaling <LINE_HEIGHT_SCALING>
          Height of the line relative to the font size.
          
          Used for figuring out vertical size of the card.
          
          Some terminals allow scaling line height (and some scale by default), this value needs to be known to calculate the right image size.
          
          It is best to set this to the same line height scaling as your terminal line height scaling.
          
          Used with image based formats.
          
          [default: 1.2]

  -h, --help
          Print help (see a summary with '-h')

----- stderr -----
